# real-time-encode

./: main.ts  package-lock.json  package.json  preloder.ts  tsconfig.json
cpp_engine/: CMakeLists.txt  main.cpp
cpp_engine/encoder/: encoder.cpp  encoder.h
renderer/: global.d.ts  index.html  renderer.js
